<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.s1.enactusprototypev00.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/enactusLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/loginEmailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/enactus_logo_margin_top"
        android:text="@string/enter_email_address"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enactusLogo" />

    <EditText
        android:id="@+id/LoginEmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/loginEmailTV"
        app:layout_constraintTop_toBottomOf="@id/loginEmailTV" />

    <TextView
        android:id="@+id/loginPasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/enter_password"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintStart_toStartOf="@id/LoginEmailET"
        app:layout_constraintTop_toBottomOf="@id/LoginEmailET" />

    <EditText
        android:id="@+id/loginPasswordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/loginPasswordTV"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordTV" />

    <Button
        android:id="@+id/registerConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        android:onClick="loginConfirmClick"
        android:text="@string/login_button"
        android:background="@color/yellow700"
        app:layout_constraintStart_toStartOf="@id/loginPasswordET"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordET" />

</android.support.constraint.ConstraintLayout>
